--- a/Spring Boot 2.5.0/src/main/resources/application.properties
+++ b/Spring Boot 2.5.0/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 
-spring.datasource.url=jdbc:postgresql://dpg-ce75rlkgqg4eemp3c0q0-a.frankfurt-postgres.render.com:5432/portfolio_l82r
-spring.datasource.username=portfolio
-spring.datasource.password=c531Rrvg2RqShkY1PqeQTkxsJrWrWkeQ
+#spring.datasource.url=jdbc:postgresql://dpg-ce75rlkgqg4eemp3c0q0-a.frankfurt-postgres.render.com:5432/portfolio_l82r
+#spring.datasource.username=portfolio
+#spring.datasource.password=c531Rrvg2RqShkY1PqeQTkxsJrWrWkeQ
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/portfolio
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
 
